// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - search reducer Should add the results 1`] = `
Object {
  "events": Object {
    "isLoading": false,
    "page": 1,
    "postType": "tribe_events",
    "results": Array [
      4,
      5,
      6,
    ],
    "term": "",
    "totalPages": 0,
  },
}
`;

exports[`[STORE] - search reducer Should clear the block to the initial state keeping only the post type 1`] = `
Object {
  "events": Object {
    "isLoading": false,
    "page": 1,
    "postType": "tribe_events",
    "results": Array [],
    "term": "",
    "totalPages": 0,
  },
}
`;

exports[`[STORE] - search reducer Should disable loading 1`] = `
Object {
  "events": Object {
    "isLoading": false,
    "page": 1,
    "postType": "tribe_events",
    "results": Array [],
    "term": "",
    "totalPages": 0,
  },
  "isLoading": true,
}
`;

exports[`[STORE] - search reducer Should enable loading 1`] = `
Object {
  "events": Object {
    "isLoading": true,
    "page": 1,
    "postType": "tribe_events",
    "results": Array [],
    "term": "",
    "totalPages": 0,
  },
}
`;

exports[`[STORE] - search reducer Should set the page 1`] = `
Object {
  "events": Object {
    "isLoading": false,
    "page": undefined,
    "postType": "tribe_events",
    "results": Array [],
    "term": "",
    "totalPages": 0,
  },
}
`;

exports[`[STORE] - search reducer Should set the post type 1`] = `
Object {
  "events": Object {
    "isLoading": false,
    "page": 1,
    "postType": undefined,
    "results": Array [],
    "term": "",
    "totalPages": 0,
  },
}
`;

exports[`[STORE] - search reducer Should set the results 1`] = `
Object {
  "events": Object {
    "isLoading": false,
    "page": 1,
    "postType": "tribe_events",
    "results": Array [
      1,
      2,
      3,
    ],
    "term": "",
    "totalPages": 0,
  },
}
`;

exports[`[STORE] - search reducer Should set the search term 1`] = `
Object {
  "events": Object {
    "isLoading": false,
    "page": 1,
    "postType": "tribe_events",
    "results": Array [],
    "term": "Modern Tribe",
    "totalPages": 0,
  },
}
`;

exports[`[STORE] - search reducer Should set the total pages 1`] = `
Object {
  "events": Object {
    "isLoading": false,
    "page": 1,
    "postType": "tribe_events",
    "results": Array [],
    "term": "",
    "totalPages": 10,
  },
}
`;
